--- a/babybuddy/templates/babybuddy/user_settings_form.html
+++ b/babybuddy/templates/babybuddy/user_settings_form.html
@@ -59,6 +59,11 @@
             <fieldset>
                 <legend>{% trans "Dashboard" %}</legend>
                 <div class="form-group row">
+                    {% with form_settings.display_feed_end_time as field %}
+                        {% include 'babybuddy/form_field.html' %}
+                    {% endwith %}
+                </div>
+                <div class="form-group row">
                     {% with form_settings.dashboard_refresh_rate as field %}
                         {% include 'babybuddy/form_field.html' %}
                     {% endwith %}
