fix: don't display check button input elements
The form submit button in Chrome is not positioned correctly when the
page also has an input element with .btn-check.

Not displaying these elements somehow resolves the issue, though it is
not clear how.

see: https://github.com/twbs/bootstrap/issues/39097

ref: #945

--- a/babybuddy/templates/babybuddy/form_field_no_label.html
+++ b/babybuddy/templates/babybuddy/form_field_no_label.html
@@ -1,9 +1,9 @@
 {% load widget_tweaks %}
 {% if field|field_type == "booleanfield" %}
     {% if field.errors %}
-        {{ field|add_class:"btn-check is-invalid" }}
+        {{ field|add_class:"btn-check d-none is-invalid" }}
     {% else %}
-        {{ field|add_class:"btn-check" }}
+        {{ field|add_class:"btn-check d-none" }}
     {% endif %}
     <label for="id_{{ field.name }}" class="btn btn-outline-light btn-no-hover">{{ field.label }}</label>
 {% elif 'choice' in field|field_type %}
